preliminary completed Fourier transforamtion

--- a/Frequency-Analysis/makefile
+++ b/Frequency-Analysis/makefile
@@ -1,7 +1,7 @@
 LINK = g++
 FLAGS = -std=c++14 -o
 TARGET = signal
-LIBS = *.cpp
+LIBS = *.cpp -L/usr/local/lib -lgsl -lgslcblas -lm
 
 TARGET: 
 	$(LINK) $(FLAGS) $(TARGET) $(LIBS)
