--- a/rotordynamics/makefile
+++ b/rotordynamics/makefile
@@ -1,14 +1,16 @@
 link:= g++ 
 flags:= -std=c++14
 compile:= -c
-libs:= main.cpp csv.cpp functions.cpp Matrix.cpp linear_bearing.cpp disk.cpp 
+libs:= main.cpp csv.cpp Matrix.cpp linear_bearing.cpp disk.cpp uniform_shaft.cpp rotor.cpp
+headers:= csv.h Matrix.h linear_bearing.h disk.h uniform_shaft.h rotor.h
+objects:= main.o csv.o Matrix.o linear_bearing.o disk.o uniform_shaft.o rotor.o
 target:= rotor
-objects:= main.o csv.o functions.o Matrix.o linear_bearing.o disk.o 
 
-target: $(objects)
+
+$(target): $(objects)
 	$(link) $(flags) -o $(target) $(objects)
 
-objects: $(libs)
+$(objects): $(libs) $(headers)
 	$(link) $(compile) $(flags) $(libs)
 
 clean:
