include gauss.c into rotordynamics

--- a/Numerical_Library/makefile
+++ b/Numerical_Library/makefile
@@ -6,7 +6,7 @@ libs = main.c gauss.c rotation.c
 target = algebra
 
 $(target): $(objects) $(libs) 
-	$(cxx) $(link) $(target) $(objects)
+	$(cxx) $(link) $(target) $(objects) -lm
 
 $(objects): $(libs) 
 	$(cxx) $(compile) $(libs)
