struggling with including c code into C++

--- a/Numerical_Library/makefile
+++ b/Numerical_Library/makefile
@@ -1,6 +1,7 @@
 cxx = gcc
 compile = -c
 link = -o
+headers = numeric_c.h
 objects = main.o gauss.o rotation.o 
 libs = main.c gauss.c rotation.c 
 target = algebra
@@ -8,7 +9,7 @@ target = algebra
 $(target): $(objects) $(libs) 
 	$(cxx) $(link) $(target) $(objects) -lm
 
-$(objects): $(libs) 
+$(objects): $(libs) $(headers)
 	$(cxx) $(compile) $(libs)
 
 clean:
