--- a/rotordynamics/makefile
+++ b/rotordynamics/makefile
@@ -1,9 +1,9 @@
 link:= g++ 
 flags:= -std=c++14
 compile:= -c
-libs:= main.cpp csv.cpp Matrix.cpp linear_bearing.cpp disk.cpp uniform_shaft.cpp rotor.cpp
-headers:= csv.h Matrix.h linear_bearing.h disk.h uniform_shaft.h rotor.h structure.h gyro.h
-objects:= main.o csv.o Matrix.o linear_bearing.o disk.o uniform_shaft.o rotor.o
+libs:= main.cpp csv.cpp Matrix.cpp linear_bearing.cpp disk.cpp uniform_shaft.cpp rotor.cpp nvector.cpp
+headers:= csv.h Matrix.h linear_bearing.h disk.h uniform_shaft.h rotor.h structure.h gyro.h nvector.h
+objects:= main.o csv.o Matrix.o linear_bearing.o disk.o uniform_shaft.o rotor.o nvector.o
 cobjects:= ../Numerical_Library/gauss.o ../Numerical_Library/rotation.o
 target:= rotor
 
