--- a/Numerical_Library/makefile
+++ b/Numerical_Library/makefile
@@ -2,8 +2,8 @@ cxx = gcc
 compile = -c
 link = -o
 headers = numeric_c.h
-objects = main.o gauss.o rotation.o 
-libs = main.c gauss.c rotation.c 
+objects = main.o gauss.o rotation.o hausholder.o square_root.o complex_numbers.o
+libs = main.c gauss.c rotation.c hausholder.c square_root.c complex_numbers.c
 target = algebra
 
 $(target): $(objects) $(libs) 
