--- a/rotordynamics/makefile
+++ b/rotordynamics/makefile
@@ -4,7 +4,7 @@ compile:= -c
 libs:= main.cpp csv.cpp Matrix.cpp linear_bearing.cpp disk.cpp uniform_shaft.cpp rotor.cpp nvector.cpp
 headers:= csv.h Matrix.h linear_bearing.h disk.h uniform_shaft.h rotor.h structure.h gyro.h nvector.h
 objects:= main.o csv.o Matrix.o linear_bearing.o disk.o uniform_shaft.o rotor.o nvector.o
-cobjects:= ../Numerical_Library/gauss.o ../Numerical_Library/rotation.o
+cobjects:= ../Numerical_Library/gauss.o ../Numerical_Library/rotation.o ../Numerical_Library/complex_numbers.o
 target:= rotor
 
 
