--- a/EMA/makefile
+++ b/EMA/makefile
@@ -1,5 +1,5 @@
 GCC=gfortran
-LIBS=*.f90
+LIBS=./*.f90 ../Numerical_Library/numerics.f90
 TARGET=modal
 TARGET: $(LIBS)
 	$(GCC) -o $(TARGET) $(LIBS)
