--- a/Jenkins-Spectral-Analysis/makefile
+++ b/Jenkins-Spectral-Analysis/makefile
@@ -1,1 +1,3 @@
 gfortran -o multicor multicor.f90 ../Numerical_Library/numerics.f90
+
+gfortran -o autospec autospec.f90 ../Numerical_Library/numerics.f90
